[Document] Areablock toolbar visibility/trigger should be configurable - resolves #3549

--- a/bundles/AdminBundle/Resources/public/css/editmode.css
+++ b/bundles/AdminBundle/Resources/public/css/editmode.css
@@ -68,6 +68,16 @@
     display: none;
 }
 
+.pimcore_area_buttons.fixed {
+    display: block;
+}
+
+.pimcore_area_buttons.fixed.top {
+    position: relative;
+    top: 0;
+    padding-bottom: 15px;
+}
+
 .pimcore_area_buttons.right {
     right: 10px;
     left: auto;
